@@ -378,27 +378,27 @@ proc usage { } {
     send_user "USAGE: runtest \[options...\]\n"
     send_user "\t--all (-a)\t\tPrint all test output to screen\n"
     send_user "\t--build \[string\]\tThe canonical triplet of the build machine\n"
+    send_user "\t--debug (-de)\t\tSet expect debugging ON\n"
+    send_user "\t--directory (-di) name\tRun only the tests in directory 'name'\n"
+    send_user "\t--help (-he)\t\tPrint help text\n"
     send_user "\t--host \[string\]\t\tThe canonical triplet of the host machine\n"
     send_user "\t--host_board \[name\]\tThe host board to use\n"
-    send_user "\t--target \[string\]\tThe canonical triplet of the target board\n"
-    send_user "\t--status (-sta)\t\tSet the exit status to fail on Tcl errors\n"
-    send_user "\t--debug (-de)\t\tSet expect debugging ON\n"
-    send_user "\t--help (-he)\t\tPrint help text\n"
-    send_user "\t--mail \[name(s)\]\tWhom to mail the results to\n"
     send_user "\t--ignore \[name(s)\]\tThe names of specific tests to ignore\n"
+    send_user "\t--log_dialog\t\t\Emit Expect output on stdout\n"
+    send_user "\t--mail \[name(s)\]\tWhom to mail the results to\n"
     send_user "\t--objdir \[name\]\t\tThe test suite binary directory\n"
     send_user "\t--outdir \[name\]\t\tThe directory to put logs in\n"
-    send_user "\t--log_dialog\t\t\Emit Expect output on stdout\n"
     send_user "\t--reboot \[name\]\t\tReboot the target (if supported)\n"
     send_user "\t--srcdir \[name\]\t\tThe test suite source code directory\n"
+    send_user "\t--status (-sta)\t\tSet the exit status to fail on Tcl errors\n"
     send_user "\t--strace \[number\]\tSet expect tracing ON\n"
+    send_user "\t--target \[string\]\tThe canonical triplet of the target board\n"
     send_user "\t--target_board \[name(s)\] The list of target boards to run tests on\n"
-    send_user "\t--tool\[name(s)\]\t\tRun tests on these tools\n"
+    send_user "\t--tool \[name(s)\]\tRun tests on these tools\n"
     send_user "\t--tool_exec \[name\]\tThe path to the tool executable to test\n"
     send_user "\t--tool_opts \[options\]\tA list of additional options to pass to the tool\n"
-    send_user "\t--directory (-di) name\tRun only the tests in directory 'name'\n"
-    send_user "\t--verbose (-v)\t\tEmit verbose output\n"
-    send_user "\t--version (-V)\t\tEmit all version numbers\n"
+    send_user "\t--verbose (-v)\t\tProduce verbose output\n"
+    send_user "\t--version (-V)\t\tPrint all relevant version numbers\n"
     send_user "\t--xml\[=name\] (-x)\tTurn on XML output generation\n"
     send_user "\t--D\[0-1\]\t\tTcl debugger\n"
     send_user "\tscript.exp\[=arg(s)\]\tRun these tests only\n"
